// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Plugins reducer Should activate the plugin 1`] = `
Object {
  "events": true,
}
`;

exports[`Plugins reducer Should add a new plugin as inactive 1`] = `
Object {
  "events": false,
}
`;

exports[`Plugins reducer Should deactivate a plugin 1`] = `
Object {
  "events": false,
}
`;

exports[`Plugins reducer Should remove the plugin from the reducer 1`] = `Object {}`;
